--- a/trunk/VIENNAAddIn/VIENNAAddIn.csproj
+++ b/trunk/VIENNAAddIn/VIENNAAddIn.csproj
@@ -216,24 +216,24 @@
       <DependentUpon>ImportPackage.cs</DependentUpon>
     </Compile>
     <Compile Include="Settings\AddInSettings.cs" />
-    <Compile Include="upcc3\ccts\AttributeExtensions.cs" />
     <Compile Include="upcc3\ccts\BusinessLibrary.cs" />
     <Compile Include="upcc3\ccts\CDT.cs" />
-    <Compile Include="upcc3\ccts\dra\CollectionExtensions.cs" />
     <Compile Include="upcc3\ccts\dra\DRABusinessLibrary.cs" />
     <Compile Include="upcc3\ccts\dra\DRACCRepository.cs" />
     <Compile Include="upcc3\ccts\dra\DRACDT.cs" />
     <Compile Include="upcc3\ccts\dra\DRADTComponent.cs" />
+    <Compile Include="upcc3\ccts\util\AttributeExtensions.cs" />
+    <Compile Include="upcc3\ccts\util\CollectionExtensions.cs" />
+    <Compile Include="upcc3\ccts\util\ElementExtensions.cs" />
+    <Compile Include="upcc3\ccts\util\PackageExtensions.cs" />
     <Compile Include="upcc3\ccts\util\TaggedValues.cs" />
     <Compile Include="upcc3\ccts\DT.cs" />
     <Compile Include="upcc3\ccts\DTComponent.cs" />
     <Compile Include="upcc3\ccts\EACCRepository.cs" />
-    <Compile Include="upcc3\ccts\ElementExtensions.cs" />
     <Compile Include="upcc3\ccts\IBusinessLibrary.cs" />
     <Compile Include="upcc3\ccts\ICCRepository.cs" />
     <Compile Include="upcc3\ccts\IDT.cs" />
     <Compile Include="upcc3\ccts\IDTComponent.cs" />
-    <Compile Include="upcc3\ccts\PackageExtensions.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\AbstractLibraryGenerator.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\AnnotationBuilder.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\BDTLibraryGenerator.cs" />
