--- a/trunk/VIENNAAddIn/VIENNAAddIn.csproj
+++ b/trunk/VIENNAAddIn/VIENNAAddIn.csproj
@@ -218,10 +218,32 @@
     <Compile Include="Settings\AddInSettings.cs" />
     <Compile Include="upcc3\ccts\BusinessLibrary.cs" />
     <Compile Include="upcc3\ccts\CDT.cs" />
-    <Compile Include="upcc3\ccts\dra\DRABusinessLibrary.cs" />
-    <Compile Include="upcc3\ccts\dra\DRACCRepository.cs" />
-    <Compile Include="upcc3\ccts\dra\DRACDT.cs" />
-    <Compile Include="upcc3\ccts\dra\DRADTComponent.cs" />
+    <Compile Include="upcc3\ccts\dra\AbstractDT.cs" />
+    <Compile Include="upcc3\ccts\dra\BDT.cs" />
+    <Compile Include="upcc3\ccts\dra\BusinessLibrary.cs" />
+    <Compile Include="upcc3\ccts\dra\CCRepository.cs" />
+    <Compile Include="upcc3\ccts\dra\CDT.cs" />
+    <Compile Include="upcc3\ccts\dra\CDTLibrary.cs" />
+    <Compile Include="upcc3\ccts\dra\DTComponent.cs" />
+    <Compile Include="upcc3\ccts\IABIE.cs" />
+    <Compile Include="upcc3\ccts\IACC.cs" />
+    <Compile Include="upcc3\ccts\IASBIE.cs" />
+    <Compile Include="upcc3\ccts\IASCC.cs" />
+    <Compile Include="upcc3\ccts\IBBIE.cs" />
+    <Compile Include="upcc3\ccts\IBCC.cs" />
+    <Compile Include="upcc3\ccts\IBDT.cs" />
+    <Compile Include="upcc3\ccts\IBDTLibrary.cs" />
+    <Compile Include="upcc3\ccts\IBIE.cs" />
+    <Compile Include="upcc3\ccts\IBIELibrary.cs" />
+    <Compile Include="upcc3\ccts\ICC.cs" />
+    <Compile Include="upcc3\ccts\ICCLibrary.cs" />
+    <Compile Include="upcc3\ccts\ICDT.cs" />
+    <Compile Include="upcc3\ccts\ICDTLibrary.cs" />
+    <Compile Include="upcc3\ccts\IDOCLibrary.cs" />
+    <Compile Include="upcc3\ccts\IENUM.cs" />
+    <Compile Include="upcc3\ccts\IENUMLibrary.cs" />
+    <Compile Include="upcc3\ccts\IPRIM.cs" />
+    <Compile Include="upcc3\ccts\IPRIMLibrary.cs" />
     <Compile Include="upcc3\ccts\util\AttributeExtensions.cs" />
     <Compile Include="upcc3\ccts\util\CollectionExtensions.cs" />
     <Compile Include="upcc3\ccts\util\ElementExtensions.cs" />
