--- a/trunk/VIENNAAddIn/VIENNAAddIn.csproj
+++ b/trunk/VIENNAAddIn/VIENNAAddIn.csproj
@@ -220,6 +220,7 @@
     <Compile Include="upcc3\ccts\CDT.cs" />
     <Compile Include="upcc3\ccts\dra\AbstractDT.cs" />
     <Compile Include="upcc3\ccts\dra\ACC.cs" />
+    <Compile Include="upcc3\ccts\dra\ASCC.cs" />
     <Compile Include="upcc3\ccts\dra\BasedOnDependency.cs" />
     <Compile Include="upcc3\ccts\dra\BCC.cs" />
     <Compile Include="upcc3\ccts\dra\BDT.cs" />
