--- a/VIENNAAddInUnitTests/VIENNAAddInUnitTests.csproj
+++ b/VIENNAAddInUnitTests/VIENNAAddInUnitTests.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="upcc3\ccts\dra\DRACCRepositoryTest.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\SelectorTest.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\StringExtensionsTest.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\ContentAttribute.cs" />
