--- a/trunk/VIENNAAddInUnitTests/VIENNAAddInUnitTests.csproj
+++ b/trunk/VIENNAAddInUnitTests/VIENNAAddInUnitTests.csproj
@@ -49,25 +49,28 @@
     <Compile Include="upcc3\ccts\dra\DRACCRepositoryTest.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\SelectorTest.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\StringExtensionsTest.cs" />
-    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\ContentAttribute.cs" />
+    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\BasedOnConnector.cs" />
+    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\TestCON.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\Path.cs" />
-    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\SupplementaryAttribute.cs" />
-    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\TestBLibrary.cs" />
-    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\TestCDT.cs" />
-    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\TestCDTLibrary.cs" />
-    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\TestEAAttribute.cs" />
-    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\TestEACollection.cs" />
-    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\TestEAElement.cs" />
-    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\TestEARepository.cs" />
-    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\TestEARepository1.cs" />
-    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\TestEARepositoryTest.cs" />
-    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\TestLibrary.cs" />
-    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\TestModel.cs" />
-    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\TestPackage.cs" />
-    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\TestPRIM.cs" />
-    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\TestPRIMLibrary.cs" />
-    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\TestRepositoryElement.cs" />
-    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\TestTaggedValue.cs" />
+    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\SUP.cs" />
+    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\BDT.cs" />
+    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\BDTLibrary.cs" />
+    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\BLibrary.cs" />
+    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\CDT.cs" />
+    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\CDTLibrary.cs" />
+    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\EAAttribute.cs" />
+    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\EACollection.cs" />
+    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\EAConnector.cs" />
+    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\EAElement.cs" />
+    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\EARepository.cs" />
+    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\EARepository1.cs" />
+    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\EARepositoryTest.cs" />
+    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\Library.cs" />
+    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\Model.cs" />
+    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\PRIM.cs" />
+    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\PRIMLibrary.cs" />
+    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\RepositoryElement.cs" />
+    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\EATaggedValue.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\XSDGeneratorTest.cs" />
   </ItemGroup>
   <ItemGroup>
