--- a/trunk/VIENNAAddInUnitTests/VIENNAAddInUnitTests.csproj
+++ b/trunk/VIENNAAddInUnitTests/VIENNAAddInUnitTests.csproj
@@ -50,7 +50,7 @@
     <Compile Include="upcc3\XSDGenerator\Generator\SelectorTest.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\StringExtensionsTest.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\ACC.cs" />
-    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\BasedOnConnector.cs" />
+    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\BasedOnDependency.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\BCC.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\CCLibrary.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\DT.cs" />
@@ -60,12 +60,12 @@
     <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\EAPackage.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\EAPackageElement.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\EATaggedValue.cs" />
-    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\TestCON.cs" />
+    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\UpccCON.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\Path.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\SUP.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\BDT.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\BDTLibrary.cs" />
-    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\UpccBLibrary.cs" />
+    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\BLibrary.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\CDT.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\CDTLibrary.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\UpccAttribute.cs" />
@@ -75,11 +75,12 @@
     <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\EARepository.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\EARepository1.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\EARepositoryTest.cs" />
-    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\UPCCBusinessLibrary.cs" />
+    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\UpccLibrary.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\Model.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\PRIM.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\PRIMLibrary.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\UpccElement.cs" />
+    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\UpccClassLibrary.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\UpccTaggedValue.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\XSDGeneratorTest.cs" />
   </ItemGroup>
