Working on issue 37.  * Implemented creation of BDTs (not yet complete).  * Another major refactoring of the TestRepository was necessary in order to support object creation.

--- a/VIENNAAddIn/VIENNAAddIn.csproj
+++ b/VIENNAAddIn/VIENNAAddIn.csproj
@@ -242,6 +242,7 @@
     <Compile Include="upcc3\ccts\dra\ENUMLibrary.cs" />
     <Compile Include="upcc3\ccts\dra\PRIM.cs" />
     <Compile Include="upcc3\ccts\dra\PRIMLibrary.cs" />
+    <Compile Include="upcc3\ccts\dra\UpccElement.cs" />
     <Compile Include="upcc3\ccts\DTComponentSpec.cs" />
     <Compile Include="upcc3\ccts\DTSpec.cs" />
     <Compile Include="upcc3\ccts\IABIE.cs" />
