--- a/VIENNAAddInUnitTests/VIENNAAddInUnitTests.csproj
+++ b/VIENNAAddInUnitTests/VIENNAAddInUnitTests.csproj
@@ -49,10 +49,14 @@
     <Compile Include="upcc3\ccts\dra\DRACCRepositoryTest.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\SelectorTest.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\StringExtensionsTest.cs" />
+    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\ABIE.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\ACC.cs" />
+    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\ASBIE.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\ASCC.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\BasedOnDependency.cs" />
+    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\BBIE.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\BCC.cs" />
+    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\BIELibrary.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\CCLibrary.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\DT.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\EAAttribute.cs" />
