Fixed issue 39:  - ABIESpec now contains ASBIESpecs.  - The Name of the ASBIESpec is used as the role name of the associated ABIE.

--- a/VIENNAAddIn/VIENNAAddIn.csproj
+++ b/VIENNAAddIn/VIENNAAddIn.csproj
@@ -219,6 +219,7 @@
     <Compile Include="Settings\AddInSettings.cs" />
     <Compile Include="Settings\SynchStereotypes.cs" />
     <Compile Include="upcc3\ccts\ABIESpec.cs" />
+    <Compile Include="upcc3\ccts\ASBIESpec.cs" />
     <Compile Include="upcc3\ccts\BBIESpec.cs" />
     <Compile Include="upcc3\ccts\BIESpec.cs" />
     <Compile Include="upcc3\ccts\CCTSElementSpec.cs" />
